Bug #28953  	Using events in a replication let the slave crash.

Fixed where the slave code would try to update the Lex->sphead which is NULL on an "alter table" commands.